# pycaret

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .slugignore  .travis.yml  Accelarating  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUE_POLICY.md  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  Procfile  README.md  Regression Notebook Testing.ipynb  TimeSeries_Forecasting.ipynb  [BUG]: Inability to control automatic evaluation metrics, makes clustering infeasible for large datasets-solved  anomaly.py  app.py  arules.py  blood_api.py  boston_api.py  cb_model.json  citation.cff  classification.py  cli.py  cli_app.py  clustering.py  datasets.py  heroku.yml  kmeans.pkl  main.py  mypy.ini  nb_test.ipynb  nb_test2.ipynb  nlp.py  preprocess.py  preprocessing_changes.md  (+28 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.ipynb_checkpoints/: nb_test-checkpoint.ipynb
Examples/: PyCaret Anomaly Detection.ipynb  PyCaret Association Rule.ipynb
Models/: juice_predict.pkl
Release Notes/: pycaret release 0.0.6.txt
Releases/: pycaret 1.0.1 - development.txt
Test Cases/: PyCaret Anomaly Detection - Test Case.ipynb  PyCaret Association Rule - Test Case.ipynb  PyCaret Classification - Test Case 2.ipynb  PyCaret Classification - Test Case 3.ipynb  PyCaret Clustering - Test Case.ipynb  PyCaret NLP - Test Case.ipynb  PyCaret Regression - Test Case 2.ipynb
Tutorials/: Anomaly Detection Tutorial (ANO102) - Level Intermediate.ipynb  Anomaly Detection Tutorial (ANO103) - Level Expert.ipynb  Anomaly Detection Tutorial Level Beginner - ANO101.ipynb  Binary Classification Tutorial (CLF101) - Level Beginner.ipynb  Binary Classification Tutorial (CLF103) - Level Expert.ipynb  Binary Classification Tutorial Level Beginner -  CLF101.ipynb  BinaryClassificationTutorial(CLF101)_LevelBeginner.ipynb  BinaryClassificationTutorial_CLF101_LevelBeginner.ipynb  BinaryClassificationTutorial_CLF103_LevelExpert.ipynb  CLU102.ipynb  Clustering Tutorial (CLU103) - Level Expert.ipynb  Final Kmeans Model 08Feb2020.pkl  Multiclass Classification Tutorial (MCLF101) - Level Beginner.ipynb  Multiclass Classification Tutorial Level Beginner - MCLF101.ipynb  Natural Language Processing Tutorial (NLP101) - Level Beginner.ipynb  Natural Language Processing Tutorial (NLP103) - Level Expert.ipynb  Natural Language Processing Tutorial Level Beginner - NLP101.ipynb  Natural Language Processing Tutorial Level Expert - NLP103.ipynb  Natural Language Processing Tutorial Level Intermediate - NLP102.ipynb  Regression Tutorial (REG101) - Level Beginner.ipynb  Regression Tutorial (REG102) - Level Intermediate.ipynb  Regression Tutorial Level Beginner - REG101.ipynb  Regression Tutorial Level Expert - REG103.ipynb  Regression Tutorial Level Intermediate - REG102.ipynb  TimeSeries_Forecasting.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
datasets/: CTG.csv  Drug Related Death.csv  air_passengers.csv  airquality.csv  amazon.csv  asia_gdp.csv  automobile.csv  bank.csv  bike.csv  blood.csv  boston.csv  cancer.csv  churn.csv  concrete.csv  country-data.csv  credit.csv  delaware_anomaly.csv  diabetes.csv  diamond.csv  elections.csv  electrical_grid.csv  electricity.csv  employee.csv  employee_performance.csv  energy.csv  ethereum_transactions.csv  facebook.csv  forest.csv  france.csv  germany.csv  glass.csv  gold.csv  heart.csv  heart_disease.csv  hepatitis.csv  house.csv  income.csv  index.csv  ipl.csv  iris.csv  (+23 more)
doc/: make.sh
docker python37/: Dockerfile
examples/: Fetal State Classification Tutorial -FSC101.ipynb  GCP_AZURE_Binary_Classification_Tutorial_Level_Beginner_CLF101.ipynb  Handling imbalanced dataset example(credit_card_fraud).ipynb  Pima Model.ipynb  PyCaret 2 - Public Bids Anomaly Detection.ipynb  PyCaret 2 Anomaly Detection.ipynb  PyCaret 2 Classification.ipynb  PyCaret 2 Clustering.ipynb  PyCaret 2 Corona Cases Prediction.ipynb  PyCaret 2 Fugue Integration.ipynb  PyCaret 2 NLP.ipynb  PyCaret 2 Regression.ipynb  PyCaret 2 Text Similarity Classification.ipynb  PyCaret 2.0 on Wine Quality(Imbalance Classes).ipynb  PyCaret 3 Fugue Integration.ipynb  PyCaret Association Rule.ipynb  PyCaret Classification.ipynb  PyCaret NLP.ipynb  PyCaret Regression.ipynb  PyCaret2-Regression-Predicting_ENEM_Math_Grades.ipynb  PyCaret2-Regression-fifa-MarketValue.ipynb  PyCaret_2_HousePrice_Regresion.ipynb  PyCaret_2_Palmers_Penguins_Classification.ipynb  PyCaret_2_Traffic_and_Drugs_Related_Violations.ipynb  Pycaret2 CreditCard Fraud Detection.ipynb  Pycaret_2.1_Regression_EmployeePerformance.ipynb  README.md  TimeSeries_Forecasting.ipynb  Toronto Police Fatalities.ipynb  Training LightGBM model on GPU .ipynb  test_notebook_model_deployment_azure_gcp_classification.ipynb  test_notebook_model_deployment_azure_gcp_regression.ipynb  toronto.csv
maint_tools/: Dockerfile  guidelines.md
pycaret/: __init__.py  anomaly.py  api.py  arules.py  azure_utils.py  classification.py  clustering.py  datasets.py  distributions.py  experiment_logger.py  forecast.py  gcp_utils.py  nlp.py  persistence.py  preprocess.py  regression.py  time_series.py  timeseries.py  utils.py  utils_persistence.py
pycaret.egg-info/: PKG-INFO  SOURCES.txt
pycaret_nightly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
releases/: pycaret 1.0.1 - development.txt
resources/: 5 things you dont know about PyCaret.md  Announcing PyCaret 1.0.md  Announcing PyCaret 2.0.md  Build and deploy machine learning web app using PyCaret and Streamlit.md  Build and deploy your first machine learning web app.md  Build with PyCaret, Deploy with FastAPI.md  Build your first Anomaly Detector in Power BI using PyCaret.md  Build your own AutoML in Power BI using PyCaret.md  Deploy Machine Learning App built using Streamlit and PyCaret on GKE.md  Deploy Machine Learning Pipeline on AWS Fargate.md  Deploy Machine Learning Pipeline on Google Kubernetes Engine.md  Deploy Machine Learning Pipeline on the cloud using Docker Container.md  Easy MLOps with PyCaret + MLflow.md  (+25 more)
(+463 files in other folders)
